# solana-snail-scalp

./: .env.example  .gitignore  CHANGELOG.md  INTEGRATION_GUIDE.md  README.md  README_FOREX.md  REAL_DATA_GUIDE.md  pyproject.toml  roadmap.md
.github/workflows/: sync-all-issues.yml  sync-issue-to-project.yml
data/: top10_solana_coins.json
data/cache/yahoo/: cache.db
data/historical/: usd_myr_1h_2y.parquet  usd_sgd_15m_5d.parquet  usd_sgd_1h_1mo.parquet  usd_sgd_1h_2y.parquet
docs/: CLI_REFERENCE.md  INSTALLATION.md  INTEGRATION.md  REAL_DATA.md  STRATEGY.md  TROUBLESHOOTING.md
examples/: complete_workflow.py  token_screening_demo.py
scripts/: README.md  forex_download_history.py  forex_fetch_live_price.py  forex_paper_trading.py  forex_run_multi_pair_backtest.py  forex_test_oanda.py  project_fields_summary.md  run_backtest.py  sync_roadmap_to_github.py  test_oanda.py
src/forex_bot/: __init__.py  portfolio_manager.py  portfolio_sizer.py
src/forex_bot/config/: __init__.py  pairs.py
src/forex_bot/data/: __init__.py  oanda_provider.py  provider.py  yahoo_provider.py
src/forex_bot/risk/: __init__.py  session_manager.py  weekend_protection.py
src/forex_bot/strategy/: __init__.py  backtest.py  indicators.py  position_sizing.py
src/snail_scalp/: __init__.py  __main__.py  backtest_engine.py  cli.py  config.py  correlation_tracker.py  data_feed.py  generate_data.py  indicators.py  multi_token_feed.py  portfolio_manager.py  real_data_fetcher.py  risk_manager.py  screening_bot.py  sentiment_analysis.py  token_screener.py  trader.py
tests/: test_quick_wins.py  test_session_manager.py  test_sprint_3_4.py  test_sprint_5_6.py  test_weekend_protection.py
